--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-aldsfkjlkjdonvo
-djgh
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Takuto Domeki ADPD</title>
+</head>
+<body>
+    This is my website
+</body>
+</html>
