--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Takuto Domeki ADPD</title>
 </head>
 <body>
-    This is my website
+    <h1>This is my website</h1>
+    <p>stupid</p>
 </body>
 </html>
