First Project Setup

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Takuto Domeki ADPD</title>
 </head>
 <body>
+    <body style="background-color:powderblue;">
     <h1>This is my website</h1>
-    <p>stupid</p>
+    <hr>
+    <a href="./project-1/index.html">project 1</a>
+    <h2>Stupid</h2>
+    <p>Stupid</p>
+    <br>
+    <p>what</p>
+    <hr>
+    <p>whaaaat</p>
+    <a href="./page-2.html">page 2</a><br>
+    <a href="https://takutodomeki.cargo.site/" target="_blank">Visit my portfolio</a>
+    <img src="./img/that-feeling-when-copy-2.png">
+    <ul>
+        <li>first</li>
+        <li>second</li>
+        <li>third</li>
+      </ul>
 </body>
 </html>
