--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Takuto Domeki ADPD</title>
 </head>
 <body>
-    <body style="background-color:powderblue;">
+    <body style="background-color:rgb(52, 188, 84);">
     <h1>This is my website</h1>
     <hr>
     <a href="./project-1/index.html">project 1</a>
