--- a/project-1/index.html
+++ b/project-1/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Metamodernist Manifesto</title>
 </head>
 <body>
     <h1>Project 1</h1>
-    <a href="../index.html">go back</a>
+    <a href="../index.html">go back to takuto website</a>
+    <a href="/page-1.html">Pillar 1</a>
+    <a href="/page-2.html">Pillar 2</a>
+    <a href="/page-3.html">Pillar 3</a>
+    <a href="/page-4.html">Pillar 4</a>
+    <a href="/page-5.html">Pillar 5</a>
+    <a href="/page-6.html">Pillar 6</a>
+    <a href="/page-7.html">Pillar 7</a>
+    <a href="/page-8.html">Pillar 8</a>
 </body>
 </html>
