--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">go back</a>   
+    <a href="./index.html">go back</a>   
 </body>
 </html>
