--- a/project-1/index.html
+++ b/project-1/index.html
@@ -6,8 +6,8 @@
     <title>Metamodernist Manifesto</title>
 </head>
 <body>
-    <h1>Project 1</h1>
-    <a href="../index.html">go back to takuto website</a>
+    <h1>Metamodernist Manifesto</h1><br>
+    <h3>Project 1</h3><br>
     <a href="./page-1.html">Pillar 1</a><br>
     <a href="./page-2.html">Pillar 2</a><br>
     <a href="./page-3.html">Pillar 3</a><br>
@@ -15,6 +15,7 @@
     <a href="./page-5.html">Pillar 5</a><br>
     <a href="./page-6.html">Pillar 6</a><br>
     <a href="./page-7.html">Pillar 7</a><br>
-    <a href="./page-8.html">Pillar 8</a><br>
+    <a href="./page-8.html">Pillar 8</a><br><br>
+    <a href="../index.html">go back to takuto website</a>
 </body>
 </html>
