--- a/project-1/page-8.html
+++ b/project-1/page-8.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html">go back</a>    
+    <a href="./index.html">go back</a>  
+    <p>We propose a pragmatic romanticism unhindered by ideological anchorage. Thus, metamodernism shall be defined as the mercurial condition between and beyond irony and sincerity, naivety and knowingness, relativism and truth, optimism and doubt, in pursuit of a plurality of disparate and elusive horizons. We must go forth and oscillate!</p>  
 </body>
 </html>
