--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./index.html">go back</a>
+    <p>We recognise oscillation to be the natural order of the world.</p>
 </body>
 </html>
