--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./index.html">go back</a>   
+    <p>We must liberate ourselves from the inertia resulting from a century of modernist ideological naivety and the cynical insincerity of its antonymous bastard child.</p>
 </body>
 </html>
