--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="./index.html">go back</a>    
+    <p>The present is a symptom of the twin birth of immediacy and obsolescence. Today, we are nostalgists as much as we are futurists. The new technology enables the simultaneous experience and enactment of events from a multiplicity of positions. Far from signalling its demise, these emergent networks facilitate the democratisation of history, illuminating the forking paths along which its grand narratives may navigate the here and now.</p>
 </body>
 </html>
