--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -8,5 +8,6 @@
 <body>
     <a href="./index.html">go back</a>
     <p>We recognise oscillation to be the natural order of the world.</p>
+    <a href="./page-2.html">Next</a>
 </body>
 </html>
