--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -8,5 +8,8 @@
 <body>
     <a href="./index.html">go back</a>
     <p>Movement shall henceforth be enabled by way of an oscillation between positions, with diametrically opposed ideas operating like the pulsating polarities of a colossal electric machine, propelling the world into action.</p>    
+    <a href="./page-4.html">Next</a>
+    <a href="./page-2.html">Back</a>
+
 </body>
 </html>
