--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -8,5 +8,7 @@
 <body>
     <a href="./index.html">go back</a>  
     <p>Just as science strives for poetic elegance, artists might assume a quest for truth. All information is grounds for knowledge, whether empirical or aphoristic, no matter its truth-value. We should embrace the scientific-poetic synthesis and informed naivety of a magical realism. Error breeds sense.</p>  
+    <a href="./page-8.html">Next</a>
+    <a href="./page-6.html">Back</a>
 </body>
 </html>
