--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -8,5 +8,7 @@
 <body>
     <a href="./index.html">go back</a>   
     <p>We must liberate ourselves from the inertia resulting from a century of modernist ideological naivety and the cynical insincerity of its antonymous bastard child.</p>
+    <a href="./page-3.html">Next</a>
+    <a href="./page-1.html">Back</a>
 </body>
 </html>
