--- a/project-1/page-5.html
+++ b/project-1/page-5.html
@@ -8,5 +8,7 @@
 <body>
     <a href="./index.html">go back</a> 
     <p>All things are caught within the irrevocable slide towards a state of maximum entropic dissemblance. Artistic creation is contingent upon the origination or revelation of difference therein. Affect at its zenith is the unmediated experience of difference in itself. It must be art’s role to explore the promise of its own paradoxical ambition by coaxing excess towards presence.</p>   
+    <a href="./page-6.html">Next</a>
+    <a href="./page-4.html">Back</a>
 </body>
 </html>
