--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html">go back</a>
+    <a href="./index.html">HOME</a>
     <p>We recognise oscillation to be the natural order of the world.</p>
     <a href="./page-2.html">Next</a>
 </body>
