--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html">go back</a>
+    <a href="./index.html">HOME</a>
     <p>Movement shall henceforth be enabled by way of an oscillation between positions, with diametrically opposed ideas operating like the pulsating polarities of a colossal electric machine, propelling the world into action.</p>    
-    <a href="./page-4.html">Next</a>
     <a href="./page-2.html">Back</a>
-
+    <a href="./page-4.html">Next</a>
 </body>
 </html>
