--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body style="background-color:rgb(52, 188, 84);">
     <h1>This is my website</h1>
     <hr>
-    <a href="./project-1/index.html">project 1</a>
+    <a href="./project-1/index.html">Project 1</a>
     <h2>Stupid</h2>
     <p>Stupid</p>
     <br>
