--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Takuto Domeki ADPD</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <body style="background-color:rgb(52, 188, 84);">
+    <body>
     <h1>This is my website</h1>
     <hr>
     <a href="./project-1/index.html">Project 1</a>
-    <h2>Stupid</h2>
-    <p>Stupid</p>
-    <br>
+    <p>Stupid</p><br>
     <p>what</p>
     <hr>
     <p>whaaaat</p>
