--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <a href="./index.html">HOME</a>   
-    <h3>2.</h3>
-    <p>We must liberate ourselves from the inertia resulting from a century of modernist ideological naivety and the cynical insincerity of its antonymous bastard child.</p>
-    <a href="./page-1.html">Back</a>
-    <a href="./page-3.html">Next</a>
+    <a href="./index.html">HOME</a>
+<div class="flexbox-container-parent">
+    <div class="flexbox-container">
+        <div>
+            <h1 class="title-numerals">2.</h1>
+        </div>
+        <div>
+            <p class="pillar">We must liberate ourselves from the inertia resulting from a century of modernist ideological naivety and the cynical insincerity of its antonymous bastard child.</p>
+        </div>
+    </div>
+</div>
+        <div class="center-text-nav">
+            <a href="./page-1.html">Back</a>
+            <a href="./page-3.html">Next</a>
+        </div>
 </body>
 </html>
