--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <a href="./index.html">HOME</a>
-    <h3>3.</h3>
-    <p>Movement shall henceforth be enabled by way of an oscillation between positions, with diametrically opposed ideas operating like the pulsating polarities of a colossal electric machine, propelling the world into action.</p>    
-    <a href="./page-2.html">Back</a>
-    <a href="./page-4.html">Next</a>
+<div class="flexbox-container-parent">
+    <div class="flexbox-container">
+        <div>
+            <h1 class="title-numerals">3.</h1>
+        </div>
+        <div>
+            <p class="pillar">Movement shall henceforth be enabled by way of an oscillation between positions, with diametrically opposed ideas operating like the pulsating polarities of a colossal electric machine, propelling the world into action.</p>
+        </div>
+    </div>
+</div>
+        <div class="center-text-nav">
+            <a href="./page-2.html">Back</a>
+            <a href="./page-4.html">Next</a>
+        </div>
 </body>
 </html>
+
