--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <a href="./index.html">HOME</a>  
-    <h3>7.</h3>
-    <p>Just as science strives for poetic elegance, artists might assume a quest for truth. All information is grounds for knowledge, whether empirical or aphoristic, no matter its truth-value. We should embrace the scientific-poetic synthesis and informed naivety of a magical realism. Error breeds sense.</p>  
-    <a href="./page-6.html">Back</a>
-    <a href="./page-8.html">Next</a>
+    <a href="./index.html">HOME</a>
+<div class="flexbox-container-parent">
+    <div class="flexbox-container">
+        <div>
+            <h1 class="title-numerals">7.</h1>
+        </div>
+        <div>
+            <p class="pillar">Just as science strives for poetic elegance, artists might assume a quest for truth. All information is grounds for knowledge, whether empirical or aphoristic, no matter its truth-value. We should embrace the scientific-poetic synthesis and informed naivety of a magical realism. Error breeds sense.</p>
+        </div>
+    </div>
+</div>
+        <div class="center-text-nav">
+            <a href="./page-6.html">Back</a>
+            <a href="./page-8.html">Next</a>
+        </div>
 </body>
 </html>
