--- a/index.html
+++ b/index.html
@@ -8,20 +8,52 @@
 </head>
 <body>
     <body>
-    <h1>This is my website</h1>
+    <h1 id="title">ADPD Website</h1>
+    <h1 class="name">Takuto Domeki</h1>
     <hr>
-    <a href="./project-1/index.html">Project 1</a>
-    <p>Stupid</p><br>
-    <p>what</p>
+    <p>Assignment Index:</p>
+    <table>
+        <tr>
+            <th></th>
+            <th>Assignment Name</th>
+            <th>Details</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td><a href="./project-1/index.html">Metamodernism Manifesto</a></td>
+            <td>Students will choose a piece of text to work with and typeset it as a web page. Students should consider how they can redesign their texts as a website to take advantage of the dynamic and non-linear potential of the web to create a new experience for the reader. The website should consist of at least five pages. A successful project requires careful consideration of navigation and typography to create a compelling new experience for the reader.
+            </td>
+        </tr>
+    </table>
     <hr>
-    <p>whaaaat</p>
     <a href="./page-2.html">page 2</a><br>
-    <a href="https://takutodomeki.cargo.site/" target="_blank">Visit my portfolio</a>
-    <img src="./img/that-feeling-when-copy-2.png">
-    <ul>
-        <li>first</li>
-        <li>second</li>
-        <li>third</li>
-      </ul>
+    <a href="https://takutodomeki.cargo.site/" target="_blank">Visit my portfolio</a><br>
+    <img class="that_feeling" src="./img/that-feeling-when-copy-2.png">
+    <div class="row">
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_162bae54-c260-4d2b-a185-d8e0c3d7d9c6_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_22b921a9-058f-4e77-ace6-144b3029b73a_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_703a05ad-fd1d-4d06-822e-70d81517be42.png_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_8fe8b516-9ffd-4a78-883f-680995343102_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_acb6c5a1-d929-4564-ace7-232934da9109_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_d2e14f90-ea78-41ab-aa64-cd5744a648d2_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_df013902-c0a4-47e8-94bc-c529edfe645a_background.png">
+        </div>
+        <div class="column">
+            <img class="selfie" src="./img/takutaco_None_fdc84c8f-8d88-4cda-9a3d-a19f02b89b0c_background.png">
+        </div>
+    </div>
 </body>
 </html>
