--- a/project-1/index.html
+++ b/project-1/index.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-1</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Metamodernist Manifesto</h1><br>
-    <h3>Project 1</h3><br>
-    <a href="./page-1.html">Pillar 1</a><br>
-    <a href="./page-2.html">Pillar 2</a><br>
-    <a href="./page-3.html">Pillar 3</a><br>
-    <a href="./page-4.html">Pillar 4</a><br>
-    <a href="./page-5.html">Pillar 5</a><br>
-    <a href="./page-6.html">Pillar 6</a><br>
-    <a href="./page-7.html">Pillar 7</a><br>
-    <a href="./page-8.html">Pillar 8</a><br><br>
-    <a href="../index.html">go back to takuto website</a>
+    <div class="flexbox-container-parent">
+        <div class="flexbox-container">
+            <div>
+                <h1 class="title">Metamodernist Manifesto</h1>
+            </div>
+            <div class="link">
+                <a href="./page-1.html">Pillar 1<br></a><br>
+                <a href="./page-2.html">Pillar 2<br></a><br><br>
+                <a href="./page-3.html">Pillar 3<br></a><br>
+                <a href="./page-4.html">Pillar 4<br></a><br><br>
+                <a href="./page-5.html">Pillar 5<br></a><br>
+                <a href="./page-6.html">Pillar 6<br></a><br><br>
+                <a href="./page-7.html">Pillar 7<br></a><br>
+                <a href="./page-8.html">Pillar 8<br></a><br><br>
+            </div>
+        </div>
+    </div>
+    </div>
+    <a href="../index.html" class="bottom-link">go back to takuto website</a>
 </body>
 </html>
