--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <a href="./index.html">HOME</a>
-    <h3>1.</h3>
-    <p>We recognise oscillation to be the natural order of the world.</p>
-    <a href="./page-2.html">Next</a>
+<div class="flexbox-container-parent">
+    <div class="flexbox-container">
+        <div>
+            <h1 class="title-numerals">1.</h1>
+        </div>
+        <div>
+            <p class="pillar">We recognise oscillation to be the natural order of the world.</p>
+        </div>
+    </div>
+</div>
+        <div class="center-text-nav">
+            <a href="./page-2.html">Next</a>
+        </div>
 </body>
 </html>
