--- a/project-1/page-8.html
+++ b/project-1/page-8.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <a href="./index.html">HOME</a>  
-    <h3>8.</h3>
-    <p>We propose a pragmatic romanticism unhindered by ideological anchorage. Thus, metamodernism shall be defined as the mercurial condition between and beyond irony and sincerity, naivety and knowingness, relativism and truth, optimism and doubt, in pursuit of a plurality of disparate and elusive horizons. We must go forth and oscillate!</p>  
-    <a href="./page-7.html">Back</a>
+    <a href="./index.html">HOME</a>
+<div class="flexbox-container-parent">
+    <div class="flexbox-container">
+        <div>
+            <h1 class="title-numerals">8.</h1>
+        </div>
+        <div>
+            <p class="pillar">We propose a pragmatic romanticism unhindered by ideological anchorage. Thus, metamodernism shall be defined as the mercurial condition between and beyond irony and sincerity, naivety and knowingness, relativism and truth, optimism and doubt, in pursuit of a plurality of disparate and elusive horizons. We must go forth and oscillate!</p>
+        </div>
+    </div>
+</div>
+        <div class="center-text-nav">
+            <a href="./page-7.html">Back</a>
+        </div>
 </body>
 </html>
