updated nav position

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <div class="flexbox-container-parent">
-        <div class="flexbox-container">
+        <div class="flexbox-container shift">
             <div>
                 <h1 class="title">Metamodernist Manifesto</h1>
             </div>
             <div class="link">
                 <a href="./page-1.html">Pillar 1<br></a><br>
-                <a href="./page-2.html">Pillar 2<br></a><br><br>
+                <a href="./page-2.html">Pillar 2<br></a><br>
                 <a href="./page-3.html">Pillar 3<br></a><br>
-                <a href="./page-4.html">Pillar 4<br></a><br><br>
+                <a href="./page-4.html">Pillar 4<br></a><br>
                 <a href="./page-5.html">Pillar 5<br></a><br>
-                <a href="./page-6.html">Pillar 6<br></a><br><br>
+                <a href="./page-6.html">Pillar 6<br></a><br>
                 <a href="./page-7.html">Pillar 7<br></a><br>
-                <a href="./page-8.html">Pillar 8<br></a><br><br>
+                <a href="./page-8.html">Pillar 8<br></a><br>
             </div>
         </div>
     </div>
     </div>
-    <a href="../index.html" class="bottom-link">go back to takuto website</a>
+    <a href="../index.html" class="bottom-link">go back to takuto's website</a>
 </body>
 </html>
