--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -7,7 +7,6 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <a href="./index.html">HOME</a>
 <div class="flexbox-container-parent">
     <div class="flexbox-container">
         <div>
@@ -19,6 +18,7 @@
     </div>
 </div>
         <div class="center-text-nav">
+            <a href="./index.html">HOME</a><br>
             <a href="./page-6.html">Back</a>
             <a href="./page-8.html">Next</a>
         </div>
