--- a/project-1/page-5.html
+++ b/project-1/page-5.html
@@ -13,14 +13,19 @@
             <h1 class="title-numerals">5.</h1>
         </div>
         <div>
-            <p class="pillar">All things are caught within the irrevocable slide towards a state of maximum entropic dissemblance. Artistic creation is contingent upon the origination or revelation of difference therein. Affect at its zenith is the unmediated experience of difference in itself. It must be art’s role to explore the promise of its own paradoxical ambition by coaxing excess towards presence.</p>
+            <p class="pillar animating-text-3">All things are caught within the irrevocable slide towards a state of maximum entropic dissemblance. Artistic creation is contingent upon the origination or revelation of difference therein. Affect at its zenith is the unmediated experience of difference in itself. It must be art’s role to explore the promise of its own paradoxical ambition by coaxing excess towards presence.</p>
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-4.html">Back</a>
-            <a href="./page-6.html">Next</a>
-        </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+<div class="next-nav">
+    <a href="./page-6.html">Next</a></div>
+<div class="back-nav">
+    <a href="./page-4.html">Back</a></div>
+</div>
 </body>
 </html>
