--- a/project-1/page-8.html
+++ b/project-1/page-8.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="flexbox-container-parent">
-    <div class="flexbox-container">
+    <div class="flexbox-container rainbow rainbow_text_animated">
         <div>
             <h1 class="title-numerals">8.</h1>
         </div>
@@ -17,9 +17,15 @@
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-7.html">Back</a>
-        </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+<div class="next-nav">
+    <a href="./page-1.html">Start Over</a></div>
+<div class="back-nav">
+    <a href="./page-7.html">Back</a></div>
+</div>
 </body>
 </html>
