--- a/project-1/page-1.html
+++ b/project-1/page-1.html
@@ -7,19 +7,25 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+
+
 <div class="flexbox-container-parent">
     <div class="flexbox-container">
         <div>
             <h1 class="title-numerals">1.</h1>
         </div>
         <div>
-            <p class="pillar">We recognise oscillation to be the natural order of the world.</p>
+            <p class="pillar">We recognise <span class="animated-text-1">oscillation</span> to be the natural order of the world.</p>
         </div>
     </div>
 </div>
-    <div class="center-text-nav">
-        <a href="./index.html">HOME</a><br>
-        <a href="./page-2.html">Next</a>
-    </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+    <div class="next-nav">
+    <a href="./page-2.html">Next</a></div>
+</div>
 </body>
 </html>
