--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -8,19 +8,25 @@
 </head>
 <body>
 <div class="flexbox-container-parent">
-    <div class="flexbox-container">
+    <div class="flexbox-container glow">
         <div>
             <h1 class="title-numerals">2.</h1>
         </div>
         <div>
-            <p class="pillar">We must liberate ourselves from the inertia resulting from a century of modernist ideological naivety and the cynical insincerity of its antonymous bastard child.</p>
+            <p class="pillar">We must <br><span class="animated-text-2">liberate</span> <br>ourselves from the inertia resulting from a century of modernist ideological naivety and the cynical insincerity of its antonymous bastard child.</p>
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-1.html">Back</a>
-            <a href="./page-3.html">Next</a>
-        </div>
+    <div class="home-nav">
+        <a href="./index.html">
+            <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+        </a><br>
+    </div>
+    <div class="next-nav">
+        <a href="./page-3.html">Next</a></div>
+    <div class="back-nav">
+        <a href="./page-1.html">Back</a></div>
+    </div>
+</div>
 </body>
 </html>
