--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -13,15 +13,20 @@
             <h1 class="title-numerals">3.</h1>
         </div>
         <div>
-            <p class="pillar">Movement shall henceforth be enabled by way of an oscillation between positions, with diametrically opposed ideas operating like the pulsating polarities of a colossal electric machine, propelling the world into action.</p>
+            <p class="pillar"><span class="movetxt">Movement</span> shall henceforth be <span class="movetxt">enabled</span> by way of an <span class="movetxt">oscillation</span> between <span class="movetxt">positions,</span> with diametrically opposed ideas operating like the <span class="movetxt">pulsating polarities</span> of a colossal electric machine, <span class="movetxt">propelling</span> the world into action.</p>
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-2.html">Back</a>
-            <a href="./page-4.html">Next</a>
-        </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+<div class="next-nav">
+    <a href="./page-4.html">Next</a></div>
+<div class="back-nav">
+    <a href="./page-2.html">Back</a></div>
+</div>
 </body>
 </html>
 
