--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -13,14 +13,19 @@
             <h1 class="title-numerals">4.</h1>
         </div>
         <div>
-            <p class="pillar">We acknowledge the limitations inherent to all movement and experience, and the futility of any attempt to transcend the boundaries set forth therein. The essential incompleteness of a system should necessitate an adherence, not in order to achieve a given end or be slaves to its course, but rather perchance to glimpse by proxy some hidden exteriority. Existence is enriched if we set about our task as if those limits might be exceeded, for such action unfolds the world.</p>
+            <p class="pillar hover-visible-text">We acknowledge the limitations inherent to all movement and experience, and the futility of any attempt to transcend the boundaries set forth therein. The essential incompleteness of a system should necessitate an adherence, not in order to achieve a given end or be slaves to its course, but rather perchance to glimpse by proxy some hidden exteriority. Existence is enriched if we set about our task as if those limits might be exceeded, for such action unfolds the world.</p>
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-3.html">Back</a>
-            <a href="./page-5.html">Next</a>
-        </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+<div class="next-nav">
+    <a href="./page-5.html">Next</a></div>
+<div class="back-nav">
+    <a href="./page-3.html">Back</a></div>
+</div>
 </body>
 </html>
