--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -6,9 +6,9 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color:rgb(14, 17, 17);">
 <div class="flexbox-container-parent">
-    <div class="flexbox-container">
+    <div class="flexbox-container glow" style="color:rgb(255, 255, 255);">
         <div>
             <h1 class="title-numerals">6.</h1>
         </div>
@@ -17,11 +17,16 @@
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-5.html">Back</a>
-            <a href="./page-7.html">Next</a>
-        </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+<div class="next-nav">
+    <a href="./page-7.html">Next</a></div>
+<div class="back-nav">
+    <a href="./page-5.html">Back</a></div>
+</div>
 </body>
 </html>
 
