--- a/project-1/page-7.html
+++ b/project-1/page-7.html
@@ -13,14 +13,19 @@
             <h1 class="title-numerals">7.</h1>
         </div>
         <div>
-            <p class="pillar">Just as science strives for poetic elegance, artists might assume a quest for truth. All information is grounds for knowledge, whether empirical or aphoristic, no matter its truth-value. We should embrace the scientific-poetic synthesis and informed naivety of a magical realism. Error breeds sense.</p>
+            <p class="pillar" style="font-family: 'Lucida Console', 'Courier New', monospace;">Just as science strives for poetic elegance, artists might assume a quest for truth. All information is grounds for knowledge, whether empirical or aphoristic, no matter its truth-value. We should embrace the scientific-poetic synthesis and informed naivety of a magical realism. Error breeds sense.</p>
         </div>
     </div>
 </div>
-        <div class="center-text-nav">
-            <a href="./index.html">HOME</a><br>
-            <a href="./page-6.html">Back</a>
-            <a href="./page-8.html">Next</a>
-        </div>
+<div class="home-nav">
+    <a href="./index.html">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+    </a><br>
+</div>
+<div class="next-nav">
+    <a href="./page-8.html">Next</a></div>
+<div class="back-nav">
+    <a href="./page-6.html">Back</a></div>
+</div>
 </body>
 </html>
