--- a/project-1/page-2.html
+++ b/project-1/page-2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="flexbox-container-parent">
-    <div class="flexbox-container glow">
+    <div class="flexbox-container">
         <div>
             <h1 class="title-numerals">2.</h1>
         </div>
