--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -19,7 +19,7 @@
 </div>
 <div class="home-nav">
     <a href="./index.html">
-        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png">
+        <img src="./img/takutaco_massachusetts_house_is_shown_on_a_white_background_dul_e6e0d329-7ff7-4b34-9196-f65f1c4ed392.png" alt="Home">
     </a><br>
 </div>
 <div class="next-nav">
