--- a/project-1/page-6.html
+++ b/project-1/page-6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pillar 6</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body style="background-color:rgb(14, 17, 17);">
