--- a/project-1/index.html
+++ b/project-1/index.html
@@ -10,7 +10,8 @@
     <div class="flexbox-container-parent">
         <div class="flexbox-container shift">
             <div>
-                <h1 class="title">Metamodernist Manifesto</h1>
+                <h1 class="title">Metamodernist <span style="color:#0400ff">
+                    M<span class="animated-text-1" style="mix-blend-mode: difference;">a</span>nifesto</h1>
             </div>
             <div class="link">
                 <a href="./page-1.html">Pillar 1<br></a><br>
