--- a/index.html
+++ b/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Takuto Domeki ADPD</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Inter+Tight:wght@500&family=Ojuju:wght@200..800&family=Srisakdi:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <body>
-    <h1 id="title">ADPD Website</h1>
-    <h1 class="name">Takuto Domeki</h1>
-    <hr>
-    <p>Assignment Index:</p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Assignment Name</th>
-            <th>Details</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td><a href="./project-1/index.html">Metamodernism Manifesto</a></td>
-            <td>Students will choose a piece of text to work with and typeset it as a web page. Students should consider how they can redesign their texts as a website to take advantage of the dynamic and non-linear potential of the web to create a new experience for the reader. The website should consist of at least five pages. A successful project requires careful consideration of navigation and typography to create a compelling new experience for the reader.
-            </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-    <hr>
-    <a href="https://takutodomeki.cargo.site/" target="_blank">Visit my portfolio</a><br>
+    <div id="header">
+        <h1 id="word" class="word1">Advanced</h1>
+        <h1 class="word2">Design</h1>
+        <div class="subheading">
+            <div class="subheading-move">
+                <p id="tagline" class="text">Takuto Domeki's Class Website for Advanced Design: Product Design Spring
+                    2024</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="project">
+            <div class="project-box">
+                <img src="./img/project1_screengrab.png" alt="Project 1">
+            </div>
+            <div class="project-box">
+                <h2> <a href="./project-1/index.html">PROJECT 1: Metamodernism Manifesto</a></h2>
+                <p class="text">A typesetting exercise using Luke Turner's 2011 "Metamodernism Manifesto."</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-box">
+                <img src="./img/project2_screengrab.png" alt="Project 2">
+            </div>
+            <div class="project-box">
+                <h2><a href="./project-2/index.html">PROJECT 2: Locals &#40;Girls like Us&#41;</a></h2>
+                <p class="text">Interactive website inspired by Underscores' "Locals &#40;Girls like Us&#41;."
+                </p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-box">
+                <img src="./img/project3_screengrab.png" alt="Project 3">
+            </div>
+            <div class="project-box">
+                <h2><a href="./project-3/index.html">PROJECT 3: Are the Shops Open?</a></h2>
+                <p class="text">Website using OpenSheet API to access Google Sheets holding data for open shop times.
+                </p>
+            </div>
+        </div>
+    </div>
+    <script src="homepage.js"></script>
 </body>
+
 </html>
