--- a/project-2/index.html
+++ b/project-2/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colored Squares Generator</title>
+    <title>Girls Like Us</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p> 
-    <span class="hover-text" data-color="#554639">Machinery</span>
-    <span class="hover-text" data-color="#FA3000">Catharsis</span>
-    <span class="hover-text" data-color="#1100FA">Technology</span>
-    <span class="hover-text" data-color="#FA96F9">Rag-Tag</span>
-    <span class="hover-text" data-color="#009BFA">Transcendent</span>
-    <span class="hover-text" data-color="#FACA01">Slapstick</span>
-    <span class="hover-text" data-color="#FA0900">Try-Hard</span>
-    <span class="hover-text" data-color="#7A423D">High-Strung</span>
-    <span class="hover-text" data-color="#2BFA00">Neurotic</span>
-    <span class="hover-text" data-color="#1600F9">Blue Cross</span>
-    <span class="hover-text" data-color="#FAF300">Golden Arches</span>
-    <span class="hover-text" data-color="#F7D2F1">Pearly Gates</span>
-    <span class="hover-text" data-color="#FAA300">Supermarket</span>
-    <span class="hover-text" data-color="#3C4F4A">Interstate</span>
-    <span class="hover-text" data-color="#AEF1FA">Picket Fence</span>
-    <span class="hover-text" data-color="#F8EB9E">Domestic</span>
-    <span class="hover-text" data-color="#FA1400">Citizen's Arrest</span>
-    <span class="hover-text" data-color="#8BA3A2">Vestibule</span>
-    <span class="hover-text" data-color="#4FA365">Two-Story</span>
-    <span class="hover-text" data-color="#40A410">J Name</span>
-    <span class="hover-text" data-color="#453854">Gas Station</span>
-    <span class="hover-text" data-color="#B175FA">Phantom Pain</span>
-    <span class="hover-text" data-color="#FA442C">Art Therapist</span>
-    <span class="hover-text" data-color="#F2EEF0">Eggshell White</span>
-    <span class="hover-text" data-color="#756A46">Office Park</span>
-    <span class="hover-text" data-color="#9E9579">Parking Garage</span>
-    <span class="hover-text" data-color="#EBF5AB">Mall</span>
-    <span class="hover-text" data-color="#CA413C">Retail</span>
-    <span class="hover-text" data-color="#00F506">Micropolitan</span>
-    <span class="hover-text" data-color="#F5F350">Turnpike</span>
-    <span class="hover-text" data-color="#CA9A87">Private Property</span>
-    <span class="hover-text" data-color="#F51A00">Killing Point</span>
-    <span class="hover-text" data-color="#E800F4">Agenda</span>
+    <p>
+        <span class="hover-text" data-color="#554639">Machinery</span>
+        <span class="hover-text" data-color="#FA3000">Catharsis</span>
+        <span class="hover-text" data-color="#1100FA">Technology</span>
+        <span class="hover-text" data-color="#FA96F9">Rag-Tag</span>
+        <span class="hover-text" data-color="#009BFA">Transcendent</span>
+        <span class="hover-text" data-color="#FACA01">Slapstick</span>
+        <span class="hover-text" data-color="#FA0900">Try-Hard</span>
+        <span class="hover-text" data-color="#7A423D">High-Strung</span>
+        <span class="hover-text" data-color="#2BFA00">Neurotic</span>
+        <span class="hover-text" data-color="#1600F9">Blue Cross</span>
+        <span class="hover-text" data-color="#FAF300">Golden Arches</span>
+        <span class="hover-text" data-color="#F7D2F1">Pearly Gates</span>
+        <span class="hover-text" data-color="#FAA300">Supermarket</span>
+        <span class="hover-text" data-color="#3C4F4A">Interstate</span>
+        <span class="hover-text" data-color="#AEF1FA">Picket Fence</span>
+        <span class="hover-text" data-color="#F8EB9E">Domestic</span>
+        <span class="hover-text" data-color="#FA1400">Citizen's Arrest</span>
+        <span class="hover-text" data-color="#8BA3A2">Vestibule</span>
+        <span class="hover-text" data-color="#4FA365">Two-Story</span>
+        <span class="hover-text" data-color="#40A410">J Name</span>
+        <span class="hover-text" data-color="#453854">Gas Station</span>
+        <span class="hover-text" data-color="#B175FA">Phantom Pain</span>
+        <span class="hover-text" data-color="#FA442C">Art Therapist</span>
+        <span class="hover-text" data-color="#F2EEF0">Eggshell White</span>
+        <span class="hover-text" data-color="#756A46">Office Park</span>
+        <span class="hover-text" data-color="#9E9579">Parking Garage</span>
+        <span class="hover-text" data-color="#EBF5AB">Mall</span>
+        <span class="hover-text" data-color="#CA413C">Retail</span>
+        <span class="hover-text" data-color="#00F506">Micropolitan</span>
+        <span class="hover-text" data-color="#F5F350">Turnpike</span>
+        <span class="hover-text" data-color="#CA9A87">Private Property</span>
+        <span class="hover-text" data-color="#F51A00">Killing Point</span>
+        <span class="hover-text" data-color="#E800F4">Agenda</span>
     </p>
     <div id="change-text">Arms</div>
 
     <script src="project-2.js"></script>
 </body>
+
 </html>
